# dataprocesser

./: .gitattributes  .gitignore  3_rewritelabel.py  4_mergecategories.py  5_split_data.py  6_testBoundingBox.py  README.md  main.py  pyproject.toml  requirements.txt  testbench.py
codes2cad/: check_dxf.py  find_block_info.py  find_text_in_box.py  generate_cad.py
dp_conversations_convert/: .gitignore  dp_conv_convert.py
duplicate_detection/: .gitignore  database.py  exacte_duplicata_detection.py  hash.py  pipeline.py  utiles.py
folder_partition/: .gitignore  partition.py  utiles.py
folders_files/: check_previews_encs_match.py  compare_folder_content.py  decladding.py  partition.py  renaming_files.py  utiles.py
occupation/: utiles.py
opencv-bootcamp/06/: 06_Writing_Video_using_OpenCV.ipynb
opencv-bootcamp/07/: image_filtering.py
personal_library/: library_gui.py  test1.py
singers/: getmp3.py  pipeline.py  video_process.py
transparent_encryption/: structed_copy.py
video-crypt/: crypt.py
video_crypt/: crypt.py  key_manager.py  pipeline.py  utils.py
video_preview/: generate_video_preview.py
yolo-process/: 1_convert.py  2_checkmatches.py  creat_val.py
yolo_process/: bounding_box.py  check_images_labels_match.py  checkmatches.py  convert.py  convert_labels.py  fake_grayscale.py  flatten_dataset.py  frame_extractor.py  mergecategories.py  pipeline.py  rewritelabel.py  separate_images_labels.py  split_data.py  testBoundingBox.py  videos2frames.py
